SimpleJpaService#getEntityId() 添加默认实现